# serenity-slash-command-framework

./: .gitignore  Cargo.toml
examples/quit/: Cargo.toml
examples/quit/src/: handler.rs  main.rs  quit.rs
proc-macro/: Cargo.toml
proc-macro/src/: attributes.rs  constants.rs  lib.rs  structures.rs  utils.rs
src/: builder.rs  error.rs  ext.rs  handler.rs  lib.rs  macros.rs
