[package]
name = "serenity-slash-command-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.30"

[dependencies.serenity]
version = "^0.10.9"
features = ["collector", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "^1.12.0"
features = ["macros", "rt-multi-thread"]
